Fixed the mess I made of the config module

--- a/example-config.yml
+++ b/example-config.yml
@@ -1,6 +1,6 @@
 telegram:
-  bot_token: 'YOUR-BOT-TOKEN-HERE'
-  chat_id: 'YOUR-CHAT-ID-HERE'
+  bot-token: 'YOUR-BOT-TOKEN-HERE'
+  chat-id: 'YOUR-CHAT-ID-HERE'
 github:
   repos:
     'author/repo': 'YOUR-REPO-SECRET-HERE'
