Add sentry integration

--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ gunicorn = "*"
 requests = "*"
 whv = "*"
 pyyaml = "*"
+sentry-sdk = {extras = ["flask"],version = "*"}
 
 [requires]
 python_version = "3.8"
